[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/graphics/alied_units/base_soldier.png" type="Texture" id=1]
[ext_resource path="res://scenes/TestScenes/CursorTest/TESTplayer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -9.5 )
shape = SubResource( 1 )

[node name="base_soldier" type="Sprite" parent="."]
position = Vector2( -1, -25.5 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
[connection signal="mouse_entered" from="." to="." method="_on_Player_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Player_mouse_exited"]
